ref: order: вынос работы со стасами в отдельный сервис